--- a/src/Component/Main/jokes/Block.module.css
+++ b/src/Component/Main/jokes/Block.module.css
@@ -1,5 +1,5 @@
 .block {
-    margin: 5vw auto;
+    margin: 1vw auto;
     background-color: #1D1E1F;
     color: #eee;
     border-radius: 15px;
